3.2.3 b541
* added two new arguments to the /lm spawner create command: /nolore and /nolore "This is some custom lore"